--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <title>Is it a good day to be an Abenz fan?</title>
+
+        <!-- Link Preview -->
+        <meta property="og:title" content="Is it a good day to be an Abenz fan?">
+        <meta property="og:url" content="https://isitagooddaytobeanabenzfan.tech">
+        <meta property="og:description" content="Yes.">
+        <meta property="og:site_name" content="twitch dot tee vee slash abenzyy">
     </head>
     <body>
         <div class="content">
