Add theme color

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta property="og:url" content="https://isitagooddaytobeanabenzfan.tech">
         <meta property="og:description" content="Yes.">
         <meta property="og:site_name" content="twitch dot tee vee slash abenzyy">
+        <meta name="theme-color" content="#62f898">
     </head>
     <body>
         <div class="content">
